# AutoEwt

./: .gitignore  README.md  pyproject.toml  requirements.txt  response.json
.github/workflows/: build.yml  run.yml
rubbish/: get_corret_answer.py  get_oss_token.py  tmp.json  tmp.py
src/: auto_base.py  config.yml.default  get_corret_answer.py  get_corret_answer_v2.py  get_question_id_v2.py  main.py  utils.py  viewer.py
src/AutoPaper/: auto_paper.py  get_corret_answer_v2.py  get_question_id_v2.py
src/AutoVideo/: auto_video.py
src/auto_paper/: auto_paper.py  get_corret_answer_v2.py  get_info_by_current_url.py  get_question_id_v2.py
src/auto_video/: auto_video.py
