[project]
name = "autoewt"
version = "0.6.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsons~=1.1.1",
    "pyyaml~=6.0.2",
    "requests~=2.32.4",
    "selenium~=4.34.2",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
